--- a/indexx.html
+++ b/indexx.html
@@ -33,7 +33,7 @@
     <div class="avatar" aria-hidden="true"></div>
     <div>
       <h1>Happy Birthday, Meri Jaan 🎂</h1>
-      <p class="lead">Aaj ka din tumhare naam — ek chhota sa surprise for you ❤️</p>
+      <p class="lead">Aaj ka din tumhare naam — ek chhota sa surprise ❤️</p>
     </div>
   </div>
 
